# roslyn-language-server

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: args.rs  hooks.rs  lib.rs  main.rs  notification.rs  path.rs  server.rs
src/hooks/: document_did_close.rs  document_did_open.rs  initialize.rs  remove_params.rs  workspace_project_initialization_complete.rs  workspace_roslyn_needs_restore.rs
src/proxy/: mod.rs  transport.rs
