[package]
name = "roslyn-ls"
version = "0.1.5"
authors = ["Mikhail Siarko <mikhail.siarko@gmail.com>"]
description = "A wrapper around Roslyn API that makes it easier to integrate it into other text editors (not VSCode)"
edition = "2024"
license = "MIT"
repository = "https://github.com/MikhailSiarko/roslyn-ls"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
faccess = "0.2.4"
ignore = "0.4.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol = "2.0.2"
async-trait = "0.1"
url = "2.5.7"
lsp-proxy = "0.1.0"

[dev-dependencies]
tempfile = "3.23.0"
